Refactoring pass
